# Formula1-RAG-Interactive-Game

./: README.md  pyproject.toml
FastAPI/: jwtauth.py  main.py
Streamlit/: info.py  landing.py  main.py
